Updating mybranch code

--- a/src/pages/registration/signup.css
+++ b/src/pages/registration/signup.css
@@ -41,6 +41,10 @@ a {
 .rainbow-button:hover {
   animation:slidebg 2s linear infinite;
 }
+#logo{
+  
+  height: 300px;
+}
 
 @keyframes slidebg {
   to {
