--- a/src/pages/registration/signup.css
+++ b/src/pages/registration/signup.css
@@ -1,50 +1,23 @@
 
-.deleter{
-          color: red;
-
-}
-#alert-local-success{
-
-  visibility: hidden;
-}
-
-#alert-local-failure{
-
-  visibility: hidden;
-}
-
 a {
   text-decoration:none;
   color:#FFF;
 }
-.rainbow-button {
-  width:calc(20vw + 6px);
-  height:calc(3vw + 6px);
-  background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
-  border-radius:5px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-transform:uppercase;
-  font-size:3vw;
-  font-weight:bold;
+h4{
+  text-align: center;
 }
-.rainbow-button:after {
-  content:attr(alt);
-  width:20vw;
-  height:3vw;
-  background-color:#191919;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+li{
+  color: red;
 }
-.rainbow-button:hover {
-  animation:slidebg 2s linear infinite;
+h2{
+  text-align: center;
 }
 #logo{
   
-  height: 300px;
+    height: 300px;
+    width:550px;
 }
+
 
 @keyframes slidebg {
   to {
