--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  background-image: url("http://wallpapers-hd-wide.com/wp-content/uploads/2016/01/wooden-blocks-background-1920x1200.jpg");
+  background-size: cover;
 }
