--- a/src/pages/registration/signup.css
+++ b/src/pages/registration/signup.css
@@ -1,4 +1,3 @@
-
 a {
   text-decoration:none;
   color:#FFF;
@@ -12,12 +11,9 @@ li{
 h2{
   text-align: center;
 }
-#logo{
-    margin:200px;
-    height: 300px;
-    width:550px;
+img{
+    width:200%;
 }
-
 
 @keyframes slidebg {
   to {
