--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,6 @@
 body, html {
     height: 100%;
     margin: 0;
+    background-image: url("http://wallpapers-hd-wide.com/wp-content/uploads/2016/01/wooden-blocks-background-1920x1200.jpg");
+    background-size: cover;
 }
